Storage approach overhaul